# Swarm-LIO2

./: README.md
livox_ros_driver_mars/: CMakeLists.txt  package.xml
livox_ros_driver_mars/Livox-SDK/: .clang-format  .gitignore
livox_ros_driver_mars/Livox-SDK/direct_mode/direct_mode_working/: main.cpp
livox_ros_driver_mars/Livox-SDK/direct_mode/switch_to_direct_mode/: lds_lidar.cpp  lds_lidar.h
livox_ros_driver_mars/Livox-SDK/direct_mode/switch_to_normal_mode/: main.cpp
livox_ros_driver_mars/Livox-SDK/sample_cc/lidar/: lds_lidar.cpp
livox_ros_driver_mars/Livox-SDK/sdk_core/include/: livox_def.h  livox_sdk.h
livox_ros_driver_mars/Livox-SDK/sdk_core/src/: livox_sdk.cpp
livox_ros_driver_mars/Livox-SDK/sdk_core/src/base/: io_loop.cpp
livox_ros_driver_mars/Livox-SDK/sdk_core/src/command_handler/: command_impl.cpp  command_impl.h
livox_ros_driver_mars/cmake/: version.cmake
livox_ros_driver_mars/common/comm/: comm_device.h  comm_protocol.cpp  comm_protocol.h  gps_protocol.cpp  gps_protocol.h  protocol.h  sdk_protocol.cpp  sdk_protocol.h
livox_ros_driver_mars/common/rapidjson/: allocators.h  cursorstreamwrapper.h  document.h  encodedstream.h  encodings.h  filereadstream.h  filewritestream.h  fwd.h  istreamwrapper.h  memorybuffer.h  memorystream.h  ostreamwrapper.h  pointer.h  prettywriter.h  rapidjson.h  reader.h  schema.h  stream.h  stringbuffer.h  writer.h
livox_ros_driver_mars/common/rapidjson/error/: en.h  error.h
livox_ros_driver_mars/common/rapidjson/internal/: biginteger.h  clzll.h  diyfp.h  dtoa.h  ieee754.h  itoa.h  meta.h  pow10.h  regex.h  stack.h  strfunc.h  strtod.h  swap.h
livox_ros_driver_mars/common/rapidjson/msinttypes/: inttypes.h  stdint.h
livox_ros_driver_mars/common/rapidxml/: rapidxml.hpp  rapidxml_iterators.hpp  rapidxml_print.hpp  rapidxml_utils.hpp
livox_ros_driver_mars/config/: display_hub_points.rviz  display_lidar_points.rviz  livox_hub_config.json  livox_lidar_config.json
livox_ros_driver_mars/launch/: livox_hub.launch  livox_hub_msg.launch  livox_hub_rviz.launch  livox_lidar.launch  livox_lidar_msg.launch  livox_lidar_rviz.launch  livox_template.launch  lvx_to_rosbag.launch  lvx_to_rosbag_rviz.launch
livox_ros_driver_mars/livox_ros_driver/: lddc.cpp  lddc.h  ldq.cpp  ldq.h  lds.h  lds_hub.h  lds_lidar.h  lds_lvx.h  livox_ros_driver.cpp  lvx_file.cpp  lvx_file.h
livox_ros_driver_mars/livox_ros_driver/include/: livox_ros_driver.h
livox_ros_driver_mars/msg/: CustomMsg.msg  CustomPoint.msg
swarm_lio/: CMakeLists.txt  package.xml  record_teammate.sh
swarm_lio/Log/: plot.py  quad1_cpu_memory.txt  quad1_solve_time.txt  quad2_cpu_memory.txt  quad2_solve_time.txt  quad2_state.txt
swarm_lio/config/: avia.yaml  mid360.yaml  simulation.yaml
swarm_lio/include/: FEC.h  common_lib.h  cpu_memory_query.h  esikf_tracker.hpp  so3_math.h
swarm_lio/launch/: gdb_debug_example.launch  livox_avia.launch  livox_mid360.launch  simulation.launch  single_drone_sim.xml
swarm_lio/matlab_code/: RMSE_calc.m  RMSE_calc_0.asv  RMSE_calc_0.m  RMSE_calc_1.m  RMSE_calc_2.m  SolveGraphTime.m  plot_global_extrinsic.m  plot_state.m  symbol_calc.m
swarm_lio/mesh/: mars02.dae  mars02_3d.dae
swarm_lio/rviz_cfg/: avia.rviz  mid360.rviz  ouster.rviz  sim00.rviz  sim01.rviz  sim02.rviz  sim03.rviz  sim04.rviz  sim05.rviz  sim06.rviz  sim07.rviz
swarm_lio/src/: ExtrinsicInfection.hpp  IMUProcessing.hpp  MultiUAV.cpp  MultiUAV.h  laserMapping.cpp  mars_simple_graph.hpp  preprocess.cpp  preprocess.h
swarm_msgs/: CMakeLists.txt  package.xml
swarm_msgs/msg/: ConnectedTeammateList.msg  GlobalExtrinsic.msg  GlobalExtrinsicStatus.msg  ObserveTeammate.msg  QuadStatePub.msg  SpatialTemporalOffset.msg  SpatialTemporalOffsetStatus.msg  TeamStatus.msg  TeammateInfo.msg
udp_bridge/: CMakeLists.txt  adhoc.sh  package.xml
udp_bridge/include/udp_bridge/: protocol.h  scope_timer.hpp
udp_bridge/launch/: udp_online.launch
udp_bridge/src/: Teammate.hpp  udp_online.cpp
